--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
     "objection": "^2.1.2",
+    "objection-slug": "^1.0.0",
     "pg": "^7.18.1"
   }
 }
