refactored the insert and select queries to contain the modifiers in the models instead of right after the queries

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "migrate": "knex migrate:latest",
-    "start": "npm run migrate && nodemon index"
+    "start": "npm run migrate && nodemon index.js"
   },
   "author": "Umar Ahmed",
   "license": "MIT",
