--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "async": "^3.1.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-promise-router": "^3.0.3",
     "knex": "^0.20.9",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
